--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,3 +4,8 @@ server:
 logging:
   level:
     root: info
+
+feign:
+  openExchangeRatesClient:
+    url: https://openexchangerates.org/api
+    appId: ca800d6c1f28496a9461bd842d20b919
